Alterei com meus softwares "preferidos"

--- a/Teste de site.html
+++ b/Teste de site.html
@@ -5,8 +5,8 @@
     </HEAD>
 
     <BODY>
-        <P> <FONT COLOR = "RED" SIZE = "15" FACE = "Verdana"> <B> Este é um teste para site </B> </FONT> 
-        <P> <P> <FONT SIZE = "9" FACE = "Verdana"> Essas são palavras que serão mudadas ao decorrer das versões. <BR> Se estiver certo, deu uma quebra no inicio dessa frase. </FONT> 
+        <P align = "center"> <FONT COLOR = "RED" SIZE = "10" FACE = "Verdana"> <B> Este é um teste para site </B> </FONT> 
+        <P> <P> <FONT SIZE = "5" FACE = "Verdana"> Essas são palavras que serão mudadas ao decorrer das versões. <BR> Se estiver certo, deu uma quebra no inicio dessa frase. Depois disso, coloquei mais palavras para ver como fica no navegador. Essa é uma nova versão porque eu não editei no Vs code, mas no bloco de notas. Primeiros dias, estou aprendendo ainda. </FONT> 
     </BODY> 
 
 </HTML>
