Site para atualizações de HTML

--- a/Teste de site.html
+++ b/Teste de site.html
@@ -1,12 +1,16 @@
-<!DOCTYPE html>
 <HTML>
     <HEAD>
-        <TITLE> Teste de site </TITLE>
+        <TITLE> Diário das atualizações </TITLE>
     </HEAD>
-
     <BODY>
-        <P align = "center"> <FONT COLOR = "RED" SIZE = "10" FACE = "Verdana"> <B> Este é um teste para site </B> </FONT> 
-        <P> <P> <FONT SIZE = "5" FACE = "Verdana"> Essas são palavras que serão mudadas ao decorrer das versões. <BR> Se estiver certo, deu uma quebra no inicio dessa frase. Depois disso, coloquei mais palavras para ver como fica no navegador. Essa é uma nova versão porque eu não editei no Vs code, mas no bloco de notas. Primeiros dias, estou aprendendo ainda. </FONT> 
+	<HR> <P align = "center"> <FONT COLOR = "Blue" SIZE = "7" FACE = "Verdana"> <B> Diário das atualizações </B> </FONT> <HR>
+        <P> <BR> <FONT SIZE = "5" FACE = "Verdana"> <PRE>	A partir de agora, esse site será para anotar as mudanças ocorridas nos meus arquivos do Github. <BR> <P> <P> </PRE> </FONT>
+	<FONT SIZE = "6" Color = "BLUE" FACE = "Verdana">  <hr> <P ALIGN = "CENTER"> <B> Dia 1: 17/06/2023, 00:41 </FONT> </B> </P> <HR> <BR> <P>
+	<FONT SIZE = "5" COLOR = "BLACK" FACE = "Verdana"> <PRE>	Dei um novo estilo ao site e mudei a estrutura, bem como a função dele. Resumindo: </PRE>
+		<UL> <P ALIGN = "CENTER">
+			<LI> Cores alteradas; <P>
+			<LI> Agora serve como diário; <P>
+			<LI> "Páginas" linkadas no início. <P>
+		</UL> </P> </FONT> <hr>
     </BODY> 
-
 </HTML>
