--- a/Assistente_matemático.html
+++ b/Assistente_matemático.html
@@ -1,14 +1,17 @@
-<HTML>
-    <HEAD>
-        <TITLE> Ajumat </TITLE>
-    </HEAD>
-    <BODY>
-	<HR> <P align = "CENTER"> <FONT COLOR = "Blue" SIZE = "7" FACE = "Verdana"> <B> AJUMAT </B> </FONT> </P> <HR>
-        <P> <BR> <FONT SIZE = "5" FACE = "Verdana"> Seja bem vindo ao site de conteúdo do meu ajudante matemático! <BR> Aqui estarão alguns conteúdeos relacionados às matérias dadas no programa principal. <BR> <P> <P> </PRE> </FONT>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ajumat</title>
+</head>
+<body>
+    <HR> <P align = "CENTER"> <FONT COLOR = "Blue" SIZE = "7" FACE = "Verdana"> <B> AJUMAT </B> </FONT> </P> <HR>
+        <P> <BR> <FONT SIZE = "5" FACE = "Verdana"> Seja bem vindo ao site de conteúdo do meu ajudante matemático! <BR> Aqui estarão alguns conteúdeos relacionados às matérias dadas no programa principal. <BR> </P> <P> </PRE> </FONT>
 	<FONT SIZE = "6" Color = "BLUE" FACE = "Verdana">  <hr> <P ALIGN = "CENTER"> <B> Algumas novidades </FONT> </B> </P> <HR> <BR> <P>
 	<FONT SIZE = "5" COLOR = "BLACK" FACE = "Verdana">
 		<UL> <P ALIGN = "CENTER">
 			<LI> <B> Dia 12/07/2023: </B>Formatações alteradas; <P>
-		</UL> </P> </FONT> <hr>
-    </BODY> 
-</HTML>
+		</UL> </P> </FONT> <hr>  
+</body>
+</html>
