--- a/Assistente_matemático.html
+++ b/Assistente_matemático.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ajumat</title>
-</head>
-<body>
-    <HR> <P align = "CENTER"> <FONT COLOR = "Blue" SIZE = "7" FACE = "Verdana"> <B> AJUMAT </B> </FONT> </P> <HR>
-        <P> <BR> <FONT SIZE = "5" FACE = "Verdana"> Seja bem vindo ao site de conteúdo do meu ajudante matemático! <BR> Aqui estarão alguns conteúdeos relacionados às matérias dadas no programa principal. <BR> </P> <P> </PRE> </FONT>
-	<FONT SIZE = "6" Color = "BLUE" FACE = "Verdana">  <hr> <P ALIGN = "CENTER"> <B> Algumas novidades </FONT> </B> </P> <HR> <BR> <P>
-	<FONT SIZE = "5" COLOR = "BLACK" FACE = "Verdana">
-		<UL> <P ALIGN = "CENTER">
-			<LI> <B> Dia 12/07/2023: </B>Formatações alteradas; <P>
-		</UL> </P> </FONT> <hr>  
-</body>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Sitemat</title>
+    </head>
+
+    <body>
+        <HR> <P align = "CENTER"> <FONT COLOR = "Blue" SIZE = "7" FACE = "Verdana"> <B> SiteMat </B> </FONT> </P> <HR>
+        <P> <BR> <FONT SIZE = "5" FACE = "Verdana"> Seja bem vindo ao Sitemat, o site do meu ajudante matemático, o AjuMat! <BR> <P> <BR> </P> <P> </PRE> </FONT>
+
+	    <FONT SIZE = "6" Color = "BLUE" FACE = "Verdana">  <hr> <P ALIGN = "CENTER"> <B> Algumas novidades </FONT> </B> </P> <HR> <BR> <P>
+    	<FONT SIZE = "5" COLOR = "BLACK" FACE = "Verdana">
+	    	<UL> <P ALIGN = "CENTER">
+		    	<LI> <B> Dia 12/07/2023: </B>Formatações alteradas; <P> <BR>
+		    </UL> </P> </FONT> <hr>  
+        
+        <P align = "CENTER"> <FONT COLOR = "Blue" SIZE = "6" FACE = "Verdana"> <B> O que é o AjuMat </B> </FONT> </P> <HR>
+        <P> <BR> <FONT SIZE = "5" FACE = "Verdana"> Esse programa foi desenvolvido para tornar mais fácil a observação e estudo de algumas fórmulas usadas na matemática básica. É, então, a unificação de todos os conteúdos no repositório do ajudante matemático! </P> <BR> </P> <P> </PRE> </FONT> 
+        
+        <HR> <P align = "CENTER"> <FONT COLOR = "Blue" SIZE = "6" FACE = "Verdana"> <B> Como o SiteMat complementa o AjuMat? </B> </FONT> </P> <HR>
+        <P> <BR> <FONT SIZE = "5" FACE = "Verdana"> Essa página foi desenvolvida para exibir a parte teórica do que é visto no programa, bem como trazer algumas extensões do que é tratado lá. Se a aplicação é a parte facilitadora, esse site é a parte teórica! </P> <BR> </P> <P> </PRE> </FONT> 
+
+    </body>
+
 </html>
