--- a/Sitemat.html
+++ b/Sitemat.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="Imagens/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="Imagens/Sitemat/favicon.ico" type="image/x-icon">
         <title>Sitemat</title>
     </head>
 
@@ -24,7 +24,7 @@
 		    </UL>  
         
         <hr> <h2> O que é o AjuMat </h2> <hr> 
-        <img src="Imagens/gestudando.jpg" alt="garota olhando um livro">
+        <img src="Imagens/Sitemat/gestudando.jpg" alt="garota olhando um livro">
         <BR><BR> Esse programa foi desenvolvido para tornar mais fácil a observação e estudo de algumas fórmulas usadas na matemática básica. É, então, a unificação de todos os conteúdos no repositório do ajudante matemático! <BR><BR><BR> 
         
         <hr> <h2> Como o SiteMat complementa o AjuMat? </h2> <hr> 
@@ -34,7 +34,7 @@
         <BR><BR> Estão aqui alguns textos e explicações para fixar diversos conteúdos matemáticos <BR><BR><BR>
 
         <hr> <h3> Equações de 1º grau </h3> <hr>  
-        <img src="Imagens/bhaskara.png" alt="quadro com fórmulas matemáticas">
+        <img src="Imagens/Sitemat/bhaskara.png" alt="quadro com fórmulas matemáticas">
         <BR><BR> Essa página foi desenvolvida para exibir a parte teórica do que é visto no programa, bem como trazer algumas extensões do que é tratado lá. Se a aplicação é a parte facilitadora, esse site é a parte teórica! <BR><BR><BR>  
 
     </body>
