Update Testes e conteúdo.html

--- a/Testes e conteúdo.html
+++ b/Testes e conteúdo.html
@@ -7,6 +7,27 @@
     <link rel="shortcut icon" href="Imagens/Testes/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    
+    <p> <h1>Testes e eventuais colas </h1> </p>
+    <img src="Imagens/Testes/favicon.ico" alt="engrenagem">
+    <h2> Algumas colas de formatação </h2>
+    Importante ressaltar que temos as semânticas e as não semânticas. As primeiras podem-se dizer que são as corretas, pois têm sentido lógico, por assim dizer. As segundas são apenas para dar forma ao que vão editar, sem significado. Além disso, essas tendem a se tornarem obsoletas em algum tempo. Logo, optar por usar as semânticas é o melhor caminho. <br><br>
+
+    <h3> Semânticas </h3>
+    <strong> Negrito: </strong> Usa-se a tag <strong>strong</strong> <br><br>
+    <strong> Itálico: </strong> Usa-se a tag <em>em</em> <br><br>
+    <strong> Marcador: </strong> Usa-se a tag <mark> mark </mark> <br><br>
+    <strong> Riscado: </strong> Usa-se a tag <del> del </del>, de delete mesmo <br><br>
+    <strong> Sublinhado: </strong> Usa-se a tag <ins> ins </ins> <br><br>
+    <strong> Texto sobrescrito: </strong> usa-se a tag sup como em 2x <sup> 2 </sup> + 2 = 0 <br><br>
+    <strong> Texto subscrito: </strong> Usa-se a tag sub como em C <sub> 6 </sub> H <sub> 12 </sub> O <sub> 6 </sub> <br><br>
+
+    <h3> Não semânticas (talvez já obsoletas ) </h3>
+    <strong> Negrito: </strong> Usa-se a tag <b>b</b> <br><br>
+    <strong> Itálico: </strong> Usa-se a tag <i>i</i> <br><br>
+    <strong> Texto grande: </strong> Usa-se a tag <big> big </big>, que já está em vermelho (obsoleta), mas ainda funciona <br><br>
+    <strong> Texto pequeno: </strong> Usa-se a tag <small> small </small>, que ainda funciona <br><br>
+    <strong> Sublinhado: </strong> Usa-se a tag <u> u </u> <br><br>
+
+    <br><br> Ambos tem o mesmo efeito, mas se olhar o código, foram feitos de formas diferentes!
 </body>
 </html>
